3.3
	+ Added Slovenian and Vietnamese languages
	+ Switch from Error to TryCatch for exception handling
	+ New EBox::Exceptions::Error to encapsulate generic Perl errors
	+ New urlEditions() helper method in EBox::Config
	+ Added EBox::NetWrappers::clean_ifaces_list_cache function
	+ Added missing EBox::Exceptions uses
	+ Fix error when initializing the framework without full environment (add
	  the full path for id command)
	+ Truncate stack traces in Auth modules to avoid reveal credentials
	+ Set version to 3.3
3.2
	+ Set version to 3.2
	+ Debug disabled by default for the stable release
3.1.2
	+ Exception stacktraces are now properly logged or shown in the interface
	  according to the debug and dump_exceptions confkeys
	+ Add new exception InvalidArgument
	+ EBox::Validate::checkEmailAddress does not ignore any longer white spaces
	  at the begin and end of the address
	+ Always show proper language name for english locales
3.1.1
	+ Removed dependencies on prototype and scriptaculous javascript libraries
	+ Removed deprecated configuration key override_user_modification
3.1
	+ Set debug = yes by default for the development series
	+ Remove "use GD" workaround in EBox::init()
	+ Added a function to get the destination address of a Point-to-Point
	  interface.
	+ Added isRangeOverlappingWithRange, isValidRange and isIPInRange
	  functions to EBox::Validate for better handling of IP ranges.
3.0.7
	+ More flexibility for printable message in EBox::Exceptions::DataExists
	+ Use silentRoot in EBox:FileSystem::dirIsEmpty to avoid log
	  exception error
	+ EBox::NetWrappers::_ifaceShowAddress now works for peer-to-peer addresses
3.0.6
	+ Added EBox::Validate::checkRegex function
	+ Added EBox::FileSystem::mountPointIsMounted function
	+ EBox::Sudo now writes correctly commands file with utf8 characters
3.0.5
	+ Get default language from /etc/default/locale
	+ Configure Log4perl to use utf8
	+ Do not try to log default locale message when logger is not initialized