@@ -30,7 +30,7 @@ sub new
 {
     my $class = shift;
 
-    local $Error::Depth = $Error::Depth + 3;
+    local $Error::Depth = defined $Error::Depth ? $Error::Depth + 3 : 3;
     local $Error::Debug = 1;
 
     my ($package, $filename, $line, $subroutine) = caller(2);
