@@ -41,7 +41,7 @@ sub new # (data=>string,  value=>string, advice => string)
         $error .= "\n$advice";
     }
 
-    local $Error::Depth = $Error::Depth + 1;
+    local $Error::Depth = defined $Error::Depth ? $Error::Depth + 1 : 1;
     local $Error::Debug = 1;
 
     $Log::Log4perl::caller_depth++;
