@@ -41,7 +41,7 @@ sub new # (arg, type)
     my $class = shift;
     my ($arg, $type) = @_;
 
-    local $Error::Depth = $Error::Depth + 1;
+    local $Error::Depth = defined $Error::Depth ? $Error::Depth + 1 : 1;
     local $Error::Debug = 1;
 
     my $argType = ref ($arg);
