@@ -33,7 +33,7 @@ sub new # (module)
             $err = "Could not get lock for service: $mod";
         }
 
-	local $Error::Depth = $Error::Depth + 1;
+	local $Error::Depth = defined $Error::Depth ? $Error::Depth + 1 : 1;
 	local $Error::Debug = 1;
 
 	$Log::Log4perl::caller_depth++;
