@@ -43,7 +43,7 @@ sub new
 
     my $error = __x('Missing argument: {data}', data => $arg);
 
-    local $Error::Depth = $Error::Depth + 1;
+    local $Error::Depth = defined $Error::Depth ? $Error::Depth + 1 : 1;
     local $Error::Debug = 1;
 
     $Log::Log4perl::caller_depth++;
