@@ -1,3 +1,5 @@
+HEAD
+	+ Avoid undefined $Error::Depth warning in exceptions
 3.3
 	+ Added Slovenian and Vietnamese languages
 	+ Switch from Error to TryCatch for exception handling
